3D CNN of this setting obtained 91.6% testing accuracy in 16 epoch.
Working on 3D attention window

--- a/3D-layer/blocks-experiments.ipynb
+++ b/3D-layer/blocks-experiments.ipynb
@@ -15,7 +15,9 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "code",
@@ -263,7 +265,7 @@
     "@MyDec('foo de fa fa')\n",
     "def bar(a,b,c):\n",
     "    print 'in bar',a,b,c\n",
-    "bar('x','y','z')\n"
+    "bar('x','y','z')"
    ]
   },
   {
@@ -406,9 +408,7 @@
     "    print('input size',a.shape)\n",
     "    print('filter size',b.shape)\n",
     "    c = np.asarray(conv3d(a,b))\n",
-    "    print('output size',c.shape)\n",
-    "    \n",
-    "\n"
+    "    print('output size',c.shape)"
    ]
   },
   {
@@ -498,7 +498,7 @@
     "# b[1,1,:,:] = 4*np.ones((3,3), dtype=floatX)\n",
     "c = f(a)\n",
     "print(c.shape)\n",
-    "print(c)\n"
+    "print(c)"
    ]
   },
   {
@@ -614,7 +614,7 @@
     "print('input size',a.shape)\n",
     "print('filter size',b.shape)\n",
     "c = conv3d.apply(a,b)\n",
-    "print(c.eval())\n"
+    "print(c.eval())"
    ]
   },
   {
@@ -684,7 +684,7 @@
     "brick2 = Linear(output_dim=4, use_bias=False, weights_init=Constant(2))\n",
     "seq = ChainOfTwoFeedforward(brick1, brick2)\n",
     "seq.initialize()\n",
-    "brick2.input_dim\n"
+    "brick2.input_dim"
    ]
   },
   {
@@ -724,7 +724,7 @@
     "rnn.initialize()\n",
     "h = rnn.apply(x)\n",
     "f = theano.function([x], h)\n",
-    "print(f(numpy.ones((5, 1, 4), dtype=theano.config.floatX))) \n"
+    "print(f(numpy.ones((5, 1, 4), dtype=theano.config.floatX)))"
    ]
   },
   {
@@ -783,7 +783,7 @@
     "first_h, second_h = feedback.apply(inputs=x)\n",
     "f = theano.function([x], [first_h, second_h])\n",
     "for states in f(numpy.ones((3, 1, 3), dtype=theano.config.floatX)):\n",
-    "    print(states) "
+    "    print(states)"
    ]
   },
   {
@@ -964,7 +964,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 2.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
