debugging attention code....

--- a/layer3D/blocks-experiments.ipynb
+++ b/layer3D/blocks-experiments.ipynb
@@ -954,27 +954,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "((False, False, False, True), (False,))\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "Elemwise{mul,no_inplace}.0"
+       "(3200, 3, 32, 3200)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import theano.tensor as tensor\n",
-    "A = tensor.zeros((3,3,3))\n",
-    "B = tensor.zeros((3,3,3))\n",
-    "A.dimshuffle([0,1,2,'x']) * B.dimshuffle([0,'x',1,2])     "
+    "A = tensor.zeros((3200, 3, 32, 1))\n",
+    "B = tensor.zeros((3200))\n",
+    "print(A.broadcastable,B.broadcastable)\n",
+    "# B = B.transpose([0, 2, 1])\n",
+    "# A.dimshuffle([0,1,2,'x']) * B.dimshuffle([0,'x',1,2])     \n",
+    "C=(A*B).eval()\n",
+    "C.shape"
    ]
   }
  ],
