--- a/layer3D/blocks-experiments.ipynb
+++ b/layer3D/blocks-experiments.ipynb
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -829,8 +829,8 @@
     "    def close(self):\n",
     "        self.tfile.close()\n",
     "\n",
-    "train_dataset = NpyTarReader('shapenet10_train.tar')\n",
-    "test_dataset = NpyTarReader('shapenet10_test.tar')\n",
+    "train_dataset = NpyTarReader('/home/hope-yao/Documents/Data/pot_cup/more_data_mixsal0.1/shapenet10_train.tar')\n",
+    "test_dataset = NpyTarReader('/home/hope-yao/Documents/Data/pot_cup/more_data_mixsal0.1/shapenet10_test.tar')\n",
     "\n",
     "train_features = []\n",
     "train_targets = []\n",
@@ -855,7 +855,7 @@
     "test_n = test_features.shape[0]\n",
     "n = train_n + test_n\n",
     "\n",
-    "f = h5py.File('shapenet10.hdf5', mode='w')\n",
+    "f = h5py.File('potcup_sal.hdf5', mode='w')\n",
     "features = f.create_dataset('input', (n, c, p1, p2, p3), dtype='uint8')\n",
     "targets = f.create_dataset('targets', (n, 1), dtype='uint8')\n",
     "\n",
@@ -901,7 +901,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -910,12 +910,12 @@
     "'''loading fuel dataset'''\n",
     "\n",
     "from fuel.datasets.hdf5 import H5PYDataset\n",
-    "train_set = H5PYDataset('shapenet110.hdf5', which_sets=('train',))"
+    "train_set = H5PYDataset('shapenet10.hdf5', which_sets=('train',))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -925,7 +925,7 @@
      "output_type": "stream",
      "text": [
       "(u'input', u'targets')\n",
-      "(1, 32768)\n"
+      "(1, 1, 32, 32, 32)\n"
      ]
     }
    ],
@@ -990,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -1011,11 +1011,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Using gpu device 0: TITAN X (Pascal) (CNMeM is enabled with initial size: 10.0% of memory, cuDNN 5105)\n"
+     ]
+    }
+   ],
    "source": [
     "'''project upper layer filter back to the input layer'''\n",
     "from theano.sandbox.cuda.dnn import dnn_conv3d\n",
@@ -1033,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -1055,7 +1063,111 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "'''filter visualization'''\n",
+    "def viz1(V):\n",
+    "    V = V/np.max(V) * 0.3 \n",
+    "    V[V<0]=0\n",
+    "    fig = plt.figure()\n",
+    "    ax = fig.add_subplot(111, projection='3d')\n",
+    "    for i in range(V.shape[0]):\n",
+    "        for j in range(V.shape[1]):\n",
+    "            for k in range(V.shape[2]):\n",
+    "                if V[i,j,k]!=0:\n",
+    "                    plot_cube(ax,i,j,k,V[i,j,k])\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "'''much faster filter visualization'''\n",
+    "# % reset\n",
+    "from mpl_toolkits.mplot3d import Axes3D\n",
+    "import matplotlib.pyplot as plt\n",
+    "def viz2(V):\n",
+    "    V = V/np.max(V) * 0.3 \n",
+    "    V[V<0]=0\n",
+    "    \n",
+    "    x=y=z=t=[]\n",
+    "    for i in range(V.shape[0]):\n",
+    "        for j in range(V.shape[1]):\n",
+    "            for k in range(V.shape[2]):\n",
+    "                if V[i,j,k]!=0:\n",
+    "                    x = x + [i]\n",
+    "                    y = y + [j]\n",
+    "                    z = z + [k]\n",
+    "                    t = t + [V[i,j,k]]\n",
+    "    x = np.asarray(x)\n",
+    "    y = np.asarray(y)\n",
+    "    z = np.asarray(z)\n",
+    "    t = np.asarray(z)\n",
+    "    \n",
+    "    fig = plt.figure()\n",
+    "    ax = fig.add_subplot(111, projection='3d')\n",
+    "    im = ax.scatter(x, y, z, c=t, marker='o', s=50)\n",
+    "    ax.set_xlabel('X Label')\n",
+    "    ax.set_ylabel('Y Label')\n",
+    "    ax.set_zlabel('Z Label')\n",
+    "    plt.xlim(0,V.shape[0])\n",
+    "    plt.ylim(0,V.shape[1])\n",
+    "#     plt.zlim((0,V.shape[2]))\n",
+    "    cax = fig.add_axes([0.27, 0.8, 0.5, 0.05])\n",
+    "    fig.colorbar(im, cax=cax, orientation='horizontal')\n",
+    "    plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "from pylab import *\n",
+    "\n",
+    "# the random data\n",
+    "x = np.random.randn(1000)\n",
+    "y = np.random.randn(1000)\n",
+    "\n",
+    "fig = plt.figure(1, figsize=(5.5,5.5))\n",
+    "\n",
+    "X, Y = meshgrid(x, y)\n",
+    "Z1 = bivariate_normal(X, Y, 1.0, 1.0, 0.0, 0.0)\n",
+    "Z2 = bivariate_normal(X, Y, 1.5, 0.5, 1, 1)\n",
+    "Z = 10 * (Z1 - Z2)\n",
+    "\n",
+    "title('Nonsense')\n",
+    "xlabel('x-stuff')\n",
+    "ylabel('y-stuff')\n",
+    "\n",
+    "# the scatter plot:\n",
+    "axScatter = plt.subplot(111)\n",
+    "axScatter.scatter(x, y)\n",
+    "\n",
+    "# set axes range\n",
+    "plt.xlim(-2, 2)\n",
+    "plt.ylim(-2, 2)\n",
+    "\n",
+    "show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
    "metadata": {
     "collapsed": false,
     "scrolled": true
@@ -1072,7 +1184,6 @@
     }
    ],
    "source": [
-    "'''filter visualization'''\n",
     "import numpy\n",
     "import matplotlib.pyplot as plt\n",
     "from mpl_toolkits.mplot3d import axes3d\n",
@@ -1088,125 +1199,7 @@
     "\n",
     "W1_layer0 = deconv(W0,W1)\n",
     "V = W1_layer0[10,0,:,:,:]\n",
-    "V = V/np.max(V) * 0.3 \n",
-    "V[V<0]=0\n",
-    "\n",
-    "fig = plt.figure()\n",
-    "ax = fig.add_subplot(111, projection='3d')\n",
-    "for i in range(V.shape[0]):\n",
-    "    for j in range(V.shape[1]):\n",
-    "        for k in range(V.shape[2]):\n",
-    "            if V[i,j,k]!=0:\n",
-    "                plot_cube(ax,i,j,k,V[i,j,k])\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 171,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "from mpl_toolkits.mplot3d import Axes3D\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "\n",
-    "def randrange(n, vmin, vmax):\n",
-    "    return (vmax - vmin)*np.random.rand(n) + vmin\n",
-    "\n",
-    "fig = plt.figure()\n",
-    "ax = fig.add_subplot(111, projection='3d')\n",
-    "n = 100\n",
-    "for c, m, zl, zh in [('r', 'o', -50, -25), ('b', '^', -30, -5)]:\n",
-    "    xs = randrange(n, 23, 32)\n",
-    "    ys = randrange(n, 0, 100)\n",
-    "    zs = randrange(n, zl, zh)\n",
-    "    ax.scatter(xs, ys, zs, c=c, marker=m)\n",
-    "\n",
-    "ax.set_xlabel('X Label')\n",
-    "ax.set_ylabel('Y Label')\n",
-    "ax.set_zlabel('Z Label')\n",
-    "\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 189,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "float() argument must be a string or a number",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-189-c70b9c50de41>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[0mzt\u001b[0m \u001b[1;33m=\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m7\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;36m9\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m11\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m9\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m10\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 20\u001b[1;33m \u001b[0max\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mscatter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mxs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mys\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mzs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mc\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mscalarMap\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_rgba\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mzs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmarker\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'o'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     21\u001b[0m \u001b[0max\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mscatter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mxt\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0myt\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mzt\u001b[0m\u001b[1;33m,\u001b[0m  \u001b[0mc\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mscalarMap\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_rgba\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mzt\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmarker\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'o'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m/home/hope-yao/anaconda2/lib/python2.7/site-packages/matplotlib/cm.pyc\u001b[0m in \u001b[0;36mto_rgba\u001b[1;34m(self, x, alpha, bytes)\u001b[0m\n\u001b[0;32m    259\u001b[0m         \u001b[1;31m# This is the normal case, mapping a scalar array:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    260\u001b[0m         \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 261\u001b[1;33m         \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    262\u001b[0m         \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcmap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0malpha\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0malpha\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbytes\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mbytes\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    263\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m/home/hope-yao/anaconda2/lib/python2.7/site-packages/matplotlib/colors.pyc\u001b[0m in \u001b[0;36m__call__\u001b[1;34m(self, value, clip)\u001b[0m\n\u001b[0;32m    939\u001b[0m             \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"minvalue must be less than or equal to maxvalue\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    940\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 941\u001b[1;33m             \u001b[0mvmin\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvmin\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    942\u001b[0m             \u001b[0mvmax\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvmax\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    943\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mclip\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: float() argument must be a string or a number"
-     ]
-    }
-   ],
-   "source": [
-    "from mpl_toolkits.mplot3d import Axes3D\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "colorsMap='jet'\n",
-    "cm = plt.get_cmap(colorsMap)\n",
-    "cNorm = matplotlib.colors.Normalize(vmin=min([zs,zt]), vmax=max([zs,zt]))\n",
-    "scalarMap = cmx.ScalarMappable(norm=cNorm, cmap=cm)\n",
-    "\n",
-    "fig = plt.figure()\n",
-    "ax = fig.add_subplot(111, projection='3d')\n",
-    "\n",
-    "xs =[1,2,3,4,5,6,7,8,9,10]\n",
-    "ys =[5,6,2,3,13,4,1,2,4,8]\n",
-    "zs =[2,3,3,3,5,7,9,11,9,10]\n",
-    "\n",
-    "xt =[-1,-2,-3,-4,-5,-6,-7,8,-9,-10]\n",
-    "yt =[-5,-6,-2,-3,-13,-4,-1,2,-4,-8]\n",
-    "zt =[-2,-3,-3,-3,-5,-7,9,-11,-9,-10]\n",
-    "\n",
-    "ax.scatter(xs, ys, zs, c=scalarMap.to_rgba(zs), marker='o')\n",
-    "ax.scatter(xt, yt, zt,  c=scalarMap.to_rgba(zt), marker='o')\n",
-    "\n",
-    "ax.set_xlabel('X Label')\n",
-    "ax.set_ylabel('Y Label')\n",
-    "ax.set_zlabel('Z Label')\n",
-    "\n",
-    "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 193,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "float() argument must be a string or a number",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-193-13d9fa1268e3>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mc\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mscalarMap\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mto_rgba\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m.05\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m/home/hope-yao/anaconda2/lib/python2.7/site-packages/matplotlib/cm.pyc\u001b[0m in \u001b[0;36mto_rgba\u001b[1;34m(self, x, alpha, bytes)\u001b[0m\n\u001b[0;32m    259\u001b[0m         \u001b[1;31m# This is the normal case, mapping a scalar array:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    260\u001b[0m         \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mma\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 261\u001b[1;33m         \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnorm\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    262\u001b[0m         \u001b[0mx\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcmap\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mx\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0malpha\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0malpha\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mbytes\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mbytes\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    263\u001b[0m         \u001b[1;32mreturn\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m/home/hope-yao/anaconda2/lib/python2.7/site-packages/matplotlib/colors.pyc\u001b[0m in \u001b[0;36m__call__\u001b[1;34m(self, value, clip)\u001b[0m\n\u001b[0;32m    939\u001b[0m             \u001b[1;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"minvalue must be less than or equal to maxvalue\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    940\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 941\u001b[1;33m             \u001b[0mvmin\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvmin\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    942\u001b[0m             \u001b[0mvmax\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mfloat\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mvmax\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    943\u001b[0m             \u001b[1;32mif\u001b[0m \u001b[0mclip\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: float() argument must be a string or a number"
-     ]
-    }
-   ],
-   "source": [
-    "c=scalarMap.to_rgba(.05)"
+    "viz2(V)"
    ]
   }
  ],
