--- a/layer3D/blocks-experiments.ipynb
+++ b/layer3D/blocks-experiments.ipynb
@@ -15,7 +15,9 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    ""
+   ]
   },
   {
    "cell_type": "code",
@@ -1006,7 +1008,7 @@
     "        for j,xij in enumerate(xi):\n",
     "            tmp = (ndimage.zoom(xij, d))\n",
     "            XX[i,j,:,:,:] = tmp\n",
-    "    return np.float32(XX)\n"
+    "    return np.float32(XX)"
    ]
   },
   {
@@ -1162,7 +1164,7 @@
     "plt.xlim(-2, 2)\n",
     "plt.ylim(-2, 2)\n",
     "\n",
-    "show()\n"
+    "show()"
    ]
   },
   {
@@ -1212,7 +1214,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 2.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
